2007-10-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (prepare_list):
	* theme-util.c: (theme_is_writable), (theme_delete): simplify code
	thanks to the new unified theme type

2007-10-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (changed_on_disk_cb): add support for live cursor
	theme updates

2007-10-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (changed_on_disk_cb):
	* appearance-themes.c: (theme_changed_on_disk_cb): adapt to changes in
	theme change notification

2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (cursor_size_scale_value_changed_cb),
	(update_cursor_size_scale), (cursor_theme_changed), (prepare_list):
	* appearance-themes.c: (theme_load_from_gconf):
	* theme-util.h: reduce the number if XCURSOR ifdefs and get rid of the
	special treatment for the default cursor theme

2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	If the cursor theme changes, and the currently set size is not
	available for the new theme, we were not updating the cursor size in
	GConf, leading to bogus results when checking for metatheme equality.

	* appearance-style.c: (cursor_size_changed_cb),
	(update_cursor_size_scale), (cursor_size_scale_value_changed_cb):
	update cursor size GConf value when the theme changes; also don't write
	bogus values to GConf when we are only doing fuzzy matches

2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	* theme-util.c: (theme_is_writable):
	* theme-util.h: move function here from common/

	* appearance-style.c: (gtk_theme_changed), (window_theme_changed),
	(icon_theme_changed), (cursor_theme_changed):
	* appearance-themes.c: (theme_selection_changed_cb): adapt callers

2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	* theme-util.c: (theme_delete): if the parent directory is empty after
	deleting a theme, delete the parent directory, too

2007-10-26  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (cursor_theme_delete_cb), (style_init):